--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,5 @@
+@charset "utf-8";
+
 /*
  *  ______     _             _______          _ _    _ _
  * |  ____|   | |           |__   __|        | | |  (_) |
