--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -4,10 +4,41 @@ footer {
     @include ms-respond(padding-top, 2);
     @include ms-respond(padding-bottom, 2);
 
+    a {
+        color: $color-variation;
+        text-decoration: none;
+
+        &:hover {
+            color: $leather;
+        }
+    }
+
+    .social-links {
+        @include ms-respond(padding-bottom, 0);
+        @include ms-respond(font-size, -1);
+        li {
+            display: inline-block;
+            vertical-align: middle;
+
+            &:not(:last-child):after{
+                content: "|";
+                display: inline-block;
+                vertical-align: middle;
+                margin: 0 0.25em;
+            }
+        }
+
+        a {
+            display: inline-block;
+            vertical-align: middle;
+        }
+    }
+
     small {
         a {
             text-decoration: none;
             font-weight: bold;
+            letter-spacing: px-to-em(1px, $base-font-size);
 
             &:visited {
                 color: $color-variation;
@@ -18,5 +49,14 @@ footer {
                 color: $leather;
             }
         }
+    }
+
+    .footer-text {
+        @include  ms-respond(padding-bottom, -5);
+    }
+
+    svg {
+        max-width: px-to-em(128px, $base-font-size);
+        @include ms-respond(padding-bottom, 0);
     }
 }
