--- a/scss/helpers/_breakpoints-config.scss
+++ b/scss/helpers/_breakpoints-config.scss
@@ -10,8 +10,10 @@
  */
 
 $breakpoints: (
+        mobile-minimum:     0px,
         mobile-portrait:    320px,
         mobile-landscape:   480px,
+        phablet-landscape:  680px,
         tablet-portrait:    768px,
         tablet-landscape:   960px,
         desktop-small:      1024px,
