--- a/scss/helpers/_breakpoints-config.scss
+++ b/scss/helpers/_breakpoints-config.scss
@@ -13,6 +13,7 @@ $breakpoints: (
         mobile-minimum:     0px,
         mobile-portrait:    320px,
         mobile-landscape:   480px,
+        phablet-portrait:   540px,
         phablet-landscape:  680px,
         tablet-portrait:    768px,
         tablet-landscape:   960px,
