--- a/scss/sections/_hero-image.scss
+++ b/scss/sections/_hero-image.scss
@@ -1,27 +1,60 @@
 .container-hero {
-    max-height: 100vh;
-    overflow: hidden;
-    position: relative;
+    section {
+        background-image: url("../images/bg.png");
+        @include ms-respond(padding-top, 4);
+        @include ms-respond(padding-bottom, 3);
+        padding-left: 1em;
+        padding-right: 1em;
+
+        @include breakpoint-min(desktop-small) {
+            @include ms-respond(padding-top, 7);
+            @include ms-respond(padding-bottom, 7);
+            background-image: url("../images/hero-image.png");
+            background-repeat: no-repeat;
+            background-position-y: center;
+            background-position-x: right;
+            background-size: cover;
+        }
+
+        @include breakpoint-min(desktop-medium) {
+            @include ms-respond(padding-top, 9);
+            @include ms-respond(padding-bottom, 9);
+            max-height: 100vh;
+        }
+
+        @include breakpoint-min(desktop-large) {
+            min-height: 100vh;
+        }
+    }
 }
 
 .hero-text {
-    position: absolute;
-    top: 50%;
-    left: 0;
-    margin-top: px-to-em(-300px, 20px);
-    width: (968px/1920px)*100%;
-    text-align: right;
+    text-align: center;
+
+    @include breakpoint-min(desktop-small) {
+        width: (968px/1920px)*100%;
+        text-align: right;
+    }
 
     ul {
-        @include ms-respond(font-size, 3);
-        @include ms-respond(line-height, 5);
-        font-weight: bold;
+        @include ms-respond(line-height, 3);
         @include ms-respond(padding-bottom, 3);
+
+        @include breakpoint-min(desktop-small) {
+            @include ms-respond(font-size, 1);
+        }
+        @include breakpoint-min(desktop-large) {
+            @include ms-respond(font-size, 3);
+            @include ms-respond(line-height, 5);
+        }
+        font-weight: bold;
     }
 }
 
 .hero-title {
-    @include ms-respond(font-size, 7);
-    @include ms-respond(line-height, 7);
+    @include breakpoint-min(desktop-large) {
+        @include ms-respond(font-size, 7);
+        @include ms-respond(line-height, 7);
+    }
     text-transform: uppercase;
 }
