--- a/scss/helpers/_variables.scss
+++ b/scss/helpers/_variables.scss
@@ -2,6 +2,7 @@ $navy-blue: #0f1628;
 $leather: #ab987a;
 $coral: #ff533d;
 $eggshell: #f3f3f3;
+$lightBlue: #e1e2e3;
 
 
 $background-default: $eggshell;
@@ -10,3 +11,4 @@ $cta: $coral;
 $color-main: $navy-blue;
 $color-variation: $eggshell;
 $link-color: $leather;
+$fallback-color: $lightBlue;
