--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -4,12 +4,6 @@ header {
     @include fixed($top: 0, $left: 0, $right: 0);
     z-index: 2;
 
-    @include breakpoint-min-max(mobile-minimum, mobile-landscape){
-        > .container {
-            padding: 0;
-        }
-    }
-
     @include breakpoint-min(tablet-portrait){
         top: 0;
     }
@@ -17,11 +11,6 @@ header {
     .title {
         @include ms-respond(font-size, 2);
         font-family: $heading-font-family;
-        display: none;
-
-        @include breakpoint-min(mobile-landscape){
-            display: block;
-        }
 
         .no-flexbox & {
                 width: 20%;
@@ -68,16 +57,16 @@ header {
                 background-size: contain;
                 height: px-to-rem(40px);
                 @include ms-respond(margin-top, -1);
+            }
 
-                @include breakpoint-min-max(mobile-minimum, mobile-landscape){
-                    height: px-to-rem(25px);
-                    @include ms-respond(margin-top, -4);
-                }
+            @include breakpoint-min-max(mobile-minimum, tablet-landscape){
+                height: px-to-rem(30px);
+                @include ms-respond(margin-top, -3);
+            }
 
-                @include breakpoint-min-max(mobile-landscape, tablet-landscape){
-                    height: px-to-rem(30px);
-                    @include ms-respond(margin-top, -3);
-                }
+            @include breakpoint-min(tablet-portrait){
+                margin-top: 0;
+                height: 100%;
             }
         }
     }
@@ -180,6 +169,11 @@ header {
         &:last-child {
             text-transform: capitalize;
             letter-spacing: 0;
+            display: none;
+
+            @include breakpoint-min(mobile-portrait-custom){
+               display: block;
+            }
 
             a {
                 @include box-shadow(inset 0 0 0 0 $cta);
