--- a/scss/sections/_hero-image.scss
+++ b/scss/sections/_hero-image.scss
@@ -3,11 +3,12 @@
         background-color: $fallback-color;
         background-image: url("../images/bg.png");
         @include ms-respond(padding-top, 4);
-        @include ms-respond(padding-bottom, 3);
+        @include ms-respond(padding-bottom, 1);
         padding-left: 1em;
         padding-right: 1em;
 
         @include breakpoint-min(desktop-small) {
+            @include ms-respond(padding-bottom, 3);
             @include ms-respond(padding-top, 7);
             @include ms-respond(padding-bottom, 7);
             background-image: url("../images/hero-image.png");
@@ -20,10 +21,9 @@
         @include breakpoint-min(desktop-medium) {
             @include ms-respond(padding-top, 9);
             @include ms-respond(padding-bottom, 9);
-            max-height: 100vh;
         }
 
-        @include breakpoint-min(desktop-large) {
+        @media screen and (min-width: 1366px) and (max-height: 968px), screen and (orientation: landscape) and (min-width: 1024px) and (max-height: 720px){
             min-height: 100vh;
         }
     }
@@ -37,7 +37,23 @@
         text-align: right;
     }
 
-    ul {
+    .social-links {
+        padding-bottom: 0;
+        @include ms-respond(padding-top, -2);
+
+        a {
+            color: $color-main;
+            text-decoration: none;
+            font-weight: bold;
+
+            &:hover,
+            &:active {
+                text-decoration: underline;
+            }
+        }
+    }
+
+    .hero-list {
         @include ms-respond(line-height, 3);
         @include ms-respond(padding-bottom, 3);
         font-weight: bold;
@@ -63,6 +79,7 @@
     @include breakpoint-min-max(mobile-minimum, mobile-landscape) {
         @include ms-respond(font-size, 2);
         @include ms-respond(line-height, 2);
+        @include ms-respond(padding-top, 0);
     }
 
 
