--- a/scss/sections/_skills.scss
+++ b/scss/sections/_skills.scss
@@ -1,7 +1,14 @@
 .container-skills {
     @include ms-respond(padding-bottom, 0);
     li {
-        padding: 0.5em;
+        padding: 0.75em;
+        flex: 1 25%;
+        text-align: center;
+
+        @include breakpoint-min(mobile-landscape){
+            padding: 0.5em;
+            flex: 1;
+        }
 
         @include breakpoint-min(desktop-small){
             padding: 1em;
@@ -11,6 +18,7 @@
     .flexbox & {
         .flex-container {
             justify-content: space-between;
+            flex-wrap: wrap;
         }
 
         .no-flexbox & {
