--- a/scss/helpers/_typography-config.scss
+++ b/scss/helpers/_typography-config.scss
@@ -1,4 +1,11 @@
 $base-font-size: 16px;
-$base-line-height: 28px;
-
+$base-line-height: 24px;
+$rhythm-unit: "rem";
 $debug-vertical-rhythm: false;
+$rem-with-px-fallback: false;
+
+$Montserrat: 'Montserrat', sans-serif;
+$Teko: 'Teko', sans-serif;
+
+$fontPrimary: $Montserrat;
+$fontSecondary: $Teko;
