--- a/scss/helpers/_colors.scss
+++ b/scss/helpers/_colors.scss
@@ -5,7 +5,7 @@ $Chocolate: #c16014;
 
 $ctaColor: $Chocolate;
 $fontColorPrimary: $Nero;
-$fontColorSecondary: $Chocolate;
+$fontColorSecondary: $Whisper;
 $backgroundPrimary: $Whisper;
 $backgroundSeconary: $QuarterSpanishWhite;
 $elementColor: $QuarterSpanishWhite;
