--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,21 +1,28 @@
 header {
-  justify-content: space-between;
-  @include fixed($top: 0, $left: 0, $right: 0);
-  background-color: $backgroundPrimary;
-  z-index: 9;
-  ul {
-    li {
-      &:not(:first-child) {
-        padding-left: 2em;
-      }
+    justify-content: space-between;
+    border-bottom: 1px solid $backgroundSeconary;
+    @include fixed($top: 0, $left: 0, $right: 0);
+    background-color: $backgroundPrimary;
+    z-index: 9;
+
+    a {
+        padding: 1em 1.5em;
+        display: block;
+        border-bottom-width: 0;
+        color: $fontColorPrimary;
+        font-weight: $semiBold;
+        box-shadow: inset 0 0 0 0 $ctaColor;
+        transition: box-shadow 0.3s ease;
+
+        &:hover {
+            color: $ctaColor;
+            box-shadow: inset 0 -3px 0 0 $ctaColor;
+        }
     }
 
-    &.social-media-links {
-      li {
-        &:not(:first-child) {
-          padding-left: .5em;
+    .social-media-links {
+        a {
+            padding: 1em .5em;
         }
-      }
     }
-  }
 }
