--- a/scss/helpers/_colors.scss
+++ b/scss/helpers/_colors.scss
@@ -2,10 +2,12 @@ $Nero: #151515;
 $Whisper: #fcfbfc;
 $QuarterSpanishWhite: #ebdcd3;
 $Chocolate: #c16014;
+$lightGray: #cecece;
 
 $ctaColor: $Chocolate;
 $fontColorPrimary: $Nero;
 $fontColorSecondary: $Whisper;
 $backgroundPrimary: $Whisper;
-$backgroundSeconary: $QuarterSpanishWhite;
+$backgroundSecondary: $lightGray;
+$backgroundTertiary: $QuarterSpanishWhite;
 $elementColor: $QuarterSpanishWhite;
