--- a/scss/components/_page.scss
+++ b/scss/components/_page.scss
@@ -3,6 +3,7 @@
 \*------------------------------------------------------------*/
 html,
 body {
+    box-sizing: border-box;
     width: 100%;
     height: 100%;
 }
