--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,28 +1,33 @@
-header {
+.header {
+    display: flex;
     justify-content: space-between;
     border-bottom: 1px solid $backgroundTertiary;
     @include fixed($top: 0, $left: 0, $right: 0);
     background-color: $backgroundPrimary;
     z-index: 9;
 
-    a {
-        padding: 1em 1.5em;
-        display: block;
-        border-bottom-width: 0;
-        color: $fontColorPrimary;
-        font-weight: $semiBold;
-        box-shadow: inset 0 0 0 0 $ctaColor;
-        transition: box-shadow 0.3s ease;
+    &__linksList {
+        display: flex;
 
-        &:hover {
-            color: $ctaColor;
-            box-shadow: inset 0 -3px 0 0 $ctaColor;
-        }
-    }
-
-    .social-media-links {
         a {
-            padding: 1em .5em;
+            padding: 1em 1.5em;
+            display: block;
+            border-bottom-width: 0;
+            color: $fontColorPrimary;
+            font-weight: $semiBold;
+            box-shadow: inset 0 0 0 0 $ctaColor;
+            transition: box-shadow 0.3s ease;
+
+            &:hover {
+                color: $ctaColor;
+                box-shadow: inset 0 -3px 0 0 $ctaColor;
+            }
+        }
+
+        &--socialMedia {
+            a {
+                padding: 1em .5em;
+            }
         }
     }
 }
