--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -5,6 +5,7 @@ body {
     @include adjust-font-size-to($base-font-size, 6);
     -webkit-font-smoothing: antialiased;
     text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
+    font-weight: $medium;
 }
 
 h1,
