--- a/scss/helpers/_typography-config.scss
+++ b/scss/helpers/_typography-config.scss
@@ -10,7 +10,7 @@ $Teko: 'Teko', sans-serif;
 $fontPrimary: $Montserrat;
 $fontSecondary: $Teko;
 
-$light: 200;
 $normal: 400;
+$medium: 500;
 $semiBold: 600;
 $bold: 800;
