--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -43,6 +43,7 @@
                       LAYOUT INCLUDES
 \*------------------------------------------------------------*/
 @import "layout/header";
+@import "layout/footer";
 
 /*------------------------------------------------------------*\
                        PAGE INCLUDES
