--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,7 +1,7 @@
 .header {
     display: flex;
     justify-content: space-between;
-    border-bottom: 1px solid $backgroundTertiary;
+    border-bottom: 1px solid $backgroundSecondary;
     @include fixed($top: 0, $left: 0, $right: 0);
     background-color: $backgroundPrimary;
     z-index: 9;
@@ -14,7 +14,6 @@
             display: block;
             border-bottom-width: 0;
             color: $fontColorPrimary;
-            font-weight: $semiBold;
             box-shadow: inset 0 0 0 0 $ctaColor;
             transition: box-shadow 0.3s ease;
 
