--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -38,6 +38,7 @@
 @import "components/list";
 @import "components/containers";
 @import "components/buttons";
+@import "components/icons";
 
 /*------------------------------------------------------------*\
                       LAYOUT INCLUDES
