--- a/scss/helpers/_colors.scss
+++ b/scss/helpers/_colors.scss
@@ -5,9 +5,16 @@ $Chocolate: #c16014;
 $lightGray: #cecece;
 
 $ctaColor: $Chocolate;
+
 $fontColorPrimary: $Nero;
 $fontColorSecondary: $Whisper;
+
 $backgroundPrimary: $Whisper;
 $backgroundSecondary: $lightGray;
+
 $backgroundTertiary: $QuarterSpanishWhite;
 $elementColor: $QuarterSpanishWhite;
+
+$sectionHoverColor: $lightGray;
+$sectionActiveColor: $ctaColor;
+$linkHoverColor: $Chocolate;
